--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ fbpageid: xxxxx
 
 # Social
 social:
-#  instagram: https://www.instagram.com/itssl/
+#  instagram: https://www.instagram.com/uslayer/
   facebook: https://www.facebook.com/uslayer
   twitter: https://twitter.com/us_layer
   youtube: https://www.youtube.com/uslayer
