--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "US LAYER"
 email: contact@uslayer.com
 formspree: xqknzwyk
 timezone: UTC
-baseurl: "uslayer.com"
+baseurl: "https://uslayer.com"
 permalink: "/:title/"
 logo: 'assets/images/uslayer-logo.svg'
 favicon: 'assets/images/favicon.ico'
