--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ timezone: UTC
 baseurl: "/"
 permalink: "/:title/"
 logo: 'assets/images/uslayer-logo.svg'
-favicon: 'assets/images/uslayer-ico.svg'
+favicon: 'assets/images/fav.svg'
 author: Admin
 paginate: 30
 disqus: 'uslayer'
