--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -5,7 +5,7 @@ topmenu:
   url: "/"
 
 - title: Hikvision
-  url: "/hikvision-products"
+  url: "/hikvision-products/"
 
 - title: About
   url: "/about/"
