--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: 'assets/images/uslayer-logo.svg'
 favicon: 'assets/images/fav.svg'
 author: Admin
 paginate: 30
-disqus: 'uslayer'
+disqus: 'us-layer'
 locale: en_us
 lang: en_us
 feed_items: 10
